2002-09-11  Nick Clifton  <nickc@redhat.com>

	* po/tr.po: Updated Turkish translation.

2002-09-10  Nick Clifton  <nickc@redhat.com>

	* MAINTAINERS: Add Ben Elliston as a maintainer for configure and
	testsuite changes.  Add paragraphs about testsuite and config
	patches.

2002-08-29  Nick Clifton  <nickc@redhat.com>

	* readelf.c (get_machine_flags): Remove redundant reference to
	E_V850EA_ARCH.

2002-08-28  Alan Modra  <amodra@bigpond.net.au>

	* objdump.c (dump_bfd): Restore lines accidentally deleted in
	last commit.

2002-08-28  Michael Hayes <m.hayes@elec.canterbury.ac.nz>

	* objdump.c (dump_headers): Add printing of HAS_LOAD_PAGE flag. 
	(dump_bfd_header): Likewise.

2002-08-27  Alan Modra  <amodra@bigpond.net.au>

	* nm.c: Revert last change.

2002-08-26  Alan Modra  <amodra@bigpond.net.au>

	* nm.c (display_rel_file): Don't report "no symbols" as an error.
	* objdump.c (slurp_symtab): Likewise.
	(slurp_dynamic_symtab): Likewise.
	(dump_symbols): Likewise.  Do print "no symbols" to stdout.

2002-08-24  Geoffrey Keating  <geoffk@redhat.com>

	* MAINTAINERS: Change my mailing address.

2002-08-23  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* MAINTAINERS: Add Dave Anglin as HPPA co-maintainer.

2002-08-22  Nick Clifton  <nickc@redhat.com>

	* MAINTAINERS: Add Jeff Law as (maintainance) maintainer for
	HPPA.

2002-08-21  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* readelf.c (parse_args): Change debug_dump_opt to static.

2002-08-16  Sivaguru Sankaridurg  <siva@eternal-systems.com>

	* stabs.c (parse_stab_argtype): Pass length of physname to
	stab_demangle_argtypes.
	(stab_demangle_argtypes): Add new parameter - length of physname.
	Pass length of physname on to stab_demangle_prefix.
	(stab_demangle_prefix): Add new parameter - length of physname.
	Use length of physname (if supplied) to compute end of function
	name.

2002-08-15  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c: Include elf/i370.h.
	(dump_relocations): Handle EM_S370.